--- a/api/package.json
+++ b/api/package.json
@@ -22,5 +22,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6"
   }
 }
